--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="jquery-3.6.0.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="./scripts/main.js"></script>
     <title>Music Store</title>
 </head>
 
 <body>
-    <h1 class="text-green"> teste</h1>
+    <h1 class="text-3xl font-bold underline teste"> teste</h1>
 </body>
 </html>
