--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
+    <link rel="stylesheet" href="/styles/main.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="./scripts/main.js"></script>
@@ -12,6 +13,6 @@
 </head>
 
 <body>
-    <h1 class="text-3xl font-bold underline teste"> teste</h1>
+    <p class="font-poppins">Brasil</p>
 </body>
 </html>
