--- a/index.html
+++ b/index.html
@@ -13,6 +13,23 @@
 </head>
 
 <body>
-    <p class="font-poppins">Brasil</p>
+    <div class="p-4">
+        <header class="">
+            <div>
+                <h1>MusicStory</h1>
+            </div>
+    
+            <div>
+                <form>
+                    <div class="border-2 border-zinc-500 rounded-full flex justify-between">
+                        <input class="px-4 rounded-full" type="text" placeholder="Busque aqui seu produto">
+                        <button> <img src="/assets/icons/search.svg" width="20px"> </button>
+                    </div>
+                </form>
+            </div>
+    
+            <div></div>
+        </header>
+    </div>
 </body>
 </html>
