--- a/index.html
+++ b/index.html
@@ -5,31 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="/styles/main.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="./scripts/main.js"></script>
     <title>Music Store</title>
 </head>
 
 <body>
     <div class="p-4">
-        <header class="">
-            <div>
-                <h1>MusicStory</h1>
-            </div>
-    
-            <div>
-                <form>
-                    <div class="border-2 border-zinc-500 rounded-full flex justify-between">
-                        <input class="px-4 rounded-full" type="text" placeholder="Busque aqui seu produto">
-                        <button> <img src="/assets/icons/search.svg" width="20px"> </button>
-                    </div>
-                </form>
-            </div>
-    
-            <div></div>
-        </header>
+        <div w3-include-html="./partials/header.html"></div>
     </div>
+    <p>teste</p>
+
+    <div class="card" style="width: 18rem;">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+    <script type="module" src="./scripts/main.js"></script>
 </body>
 </html>
