--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             </div>
 
 
-            <div id="carouselExampleIndicators" class="carousel slide z-0 md:grow-[2]" data-bs-ride="true">
+            <div id="carouselExampleIndicators" class="carousel slide z-0 md:grow-[2] h-full w-full" data-bs-ride="true">
                 <div class="carousel-indicators">
                   <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                   <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -96,15 +96,15 @@
                 </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active h-[300px] md:h-[450px]">
-                    <img src="./assets/images/banner-dawnfm.jpg" class="d-block w-100 h-full" alt="...">
+                    <img src="./assets/images/banner-dawnfm.jpg" class="d-block w-full h-full" alt="...">
                   </div>
     
                   <div class="carousel-item h-[300px] md:h-[450px]">
-                    <img src="./assets/images/banner-gor.png" class="d-block w-100 h-full" alt="...">
+                    <img src="./assets/images/banner-gor.png" class="d-block w-full h-full" alt="...">
                   </div>
     
                   <div class="carousel-item h-[300px] md:h-[450px]">
-                    <img src="./assets/images/banner-GG.jpeg" class="d-block w-100 h-full" alt="...">
+                    <img src="./assets/images/banner-GG.jpeg" class="d-block w-full h-full" alt="...">
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
