--- a/login.html
+++ b/login.html
@@ -1,52 +1,51 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link rel="stylesheet" href="/styles/main.css">
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="./scripts/main.js"></script>
-
-    <!-- Latest compiled and minified CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Latest compiled JavaScript -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
-    <title>Music Store</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+        <!-- CSS only -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+        <link rel="stylesheet" href="/styles/main.css">
+        <script src="https://cdn.tailwindcss.com"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <title>Music Store - Login</title>
+    </head>
 
 <body>
+    <div w3-include-html="./partials/header.html"></div>
+
     <div class="p-4">
-        <header class="">
-            <div>
-                <h1>MusicStory</h1>
+
+    <div class="flex flex-col md:flex-row justify-center md:mt-24">
+        <form action="" id="frm1" class="md:pr-14 md:border-r-2 md:border-ms-purple">
+            <div class="mb-3 mt-3">
+              <label for="user" class="form-label text-[18px] font-bold">Usuário:</label>
+              <input type="text" class="form-control" id="usuario" placeholder="Digite seu usuário" name="user">
             </div>
-    
-            <div>
-                <form>
-                    <div class="border-2 border-zinc-500 rounded-full flex justify-between">
-                        <input class="px-4 rounded-full" type="text" placeholder="Busque aqui seu produto">
-                        <button> <img src="/assets/icons/search.svg" width="20px"> </button>
-                    </div>
-                </form>
+            <div class="mb-3">
+              <label for="senha" class="form-label text-[18px] font-bold">Senha:</label>
+              <input type="password" class="form-control" id="senha" placeholder="Digite sua senha" name="senha">
             </div>
-            <div></div>
-        </header>
+
+            <div class="flex justify-between items-center">
+                <button type="submit" class="btn btn-primary bg-ms-blue" onclick="validar();">Entrar</button>
+                <a class="text-[16px] text-ms-blue">Esqueci minha senha</a>
+            </div>
+        </form>
+
+        <div class="md:ml-14 mt-14 md:mt-0 md:self-center">
+            <h2 class="text-[16px] mb-2">Ainda não tem cadastro?</h2>
+            <a href="cadastro.html" class="btn btn-primary bg-ms-blue">Clique Aqui</a>
+        </div>
     </div>
-    <form action="" id="frm1">
-        <div class="mb-3 mt-3">
-          <label for="user" class="form-label">Usuário:</label>
-          <input type="text" class="form-control" id="usuario" placeholder="Digite seu usuário" name="user">
-        </div>
-        <div class="mb-3">
-          <label for="senha" class="form-label">Senha:</label>
-          <input type="password" class="form-control" id="senha" placeholder="Digite sua senha" name="senha">
-        </div>
-        <button type="submit" class="btn" onclick="validar();">Entrar</button>
-      </form>
+
+    </div>
+
+<!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+<script type="module" src="./scripts/main.js"></script>
 </body>
 </html>
 
