--- a/cadastro.html
+++ b/cadastro.html
@@ -1,34 +1,57 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link rel="stylesheet" href="/styles/main.css">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <title>Music Store - Cadastro</title>
+</head>
 
 
 <body>
-    <h1>CADASTRO</h1>
-    <form action="" id="frm2">
-        <div class="mb-3 mt-3">
-            <label for="nome" class="form-label">Nome:</label>
-            <input type="text" class="form-control" id="cadNome" placeholder="Digite seu nome completo" name="nome">
-        </div>
-        <div class="mb-3 mt-3">
-            <label for="email" class="form-label">E-mail:</label>
-            <input type="text" class="form-control" id="caEmail" placeholder="Digite seu e-mail" name="email">
+  <div w3-include-html="./partials/header.html"></div>
+
+  <div class="p-4">
+    <div class="max-w-[600px] mx-auto">
+      <h1 class="text-[24px]">Cadastro</h1>
+      <form action="" id="frm2">
+          <div class="mb-3 mt-3">
+              <label for="nome" class="form-label font-bold">Nome:</label>
+              <input type="text" class="form-control" id="cadNome" placeholder="Digite seu nome completo" name="nome">
           </div>
           <div class="mb-3 mt-3">
-            <label for="cpf" class="form-label">CPF:</label>
-            <input type="text" class="form-control" id="cadCpf" placeholder="Digite seu CPF" name="cpf">
-        </div>
-        <div class="mb-3 mt-3">
-          <label for="user" class="form-label">Usuário:</label>
-          <input type="text" class="form-control" id="cadUsuario" placeholder="Digite seu usuário" name="user">
-        </div>
-        <div class="mb-3">
-          <label for="senha" class="form-label">Senha:</label>
-          <input type="password" class="form-control" id="CadSenha" placeholder="Digite sua senha" name="senha">
-        </div>
-        <button type="submit" class="btn" onclick="validar();">Entrar</button>
-      </form>
+              <label for="email" class="form-label font-bold">E-mail:</label>
+              <input type="text" class="form-control" id="caEmail" placeholder="Digite seu e-mail" name="email">
+            </div>
+            <div class="mb-3 mt-3">
+              <label for="cpf" class="form-label font-bold">CPF:</label>
+              <input type="text" class="form-control" id="cadCpf" placeholder="Digite seu CPF" name="cpf">
+          </div>
+          <div class="mb-3 mt-3">
+            <label for="user" class="form-label font-bold">Usuário:</label>
+            <input type="text" class="form-control" id="cadUsuario" placeholder="Digite seu usuário" name="user">
+          </div>
+          <div class="mb-3">
+            <label for="senha" class="form-label font-bold">Senha:</label>
+            <input type="password" class="form-control" id="CadSenha" placeholder="Digite sua senha" name="senha">
+          </div>
+
+          <div class="flex justify-end mt-4">
+            <button type="submit" class="btn btn-primary bg-ms-blue" onclick="validar();">Cadastrar</button>
+          </div>
+          
+        </form>
+    </div>
+  </div>
 
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <script type="module" src="./scripts/main.js"></script>
 </body>
+</html>
