--- a/login.html
+++ b/login.html
@@ -31,7 +31,7 @@
 
             <div class="flex justify-between items-center">
                 <button type="submit" class="btn btn-primary bg-ms-blue" onclick="validar();">Entrar</button>
-                <a class="text-[16px] text-ms-blue">Esqueci minha senha</a>
+                <a href="forget.html" class="text-[16px] text-ms-blue">Esqueci minha senha</a>
             </div>
         </form>
 
