--- a/cadastro.html
+++ b/cadastro.html
@@ -27,7 +27,7 @@
           </div>
           <div class="mb-3 mt-3">
               <label for="email" class="form-label font-bold">E-mail:</label>
-              <input type="text" class="form-control" id="caEmail" placeholder="Digite seu e-mail" name="email">
+              <input type="text" class="form-control" id="cadEmail" placeholder="Digite seu e-mail" name="email">
             </div>
             <div class="mb-3 mt-3">
               <label for="cpf" class="form-label font-bold">CPF:</label>
@@ -55,3 +55,73 @@
     <script type="module" src="./scripts/main.js"></script>
 </body>
 </html>
+
+<script lang="javascript">
+  function validar(){
+      if(cadNome.value.length<3){
+         alert("Informe o nome completo");
+         cadNome.focus();
+         return false;
+      }
+      if(cadEmail.value.length<6 ||
+        cadEmail.value.indexOf("@")<1){
+         alert("Informe um e-mail válido");
+         cadEmail.focus();
+         return false;
+      }
+      if(validarCPF(cadCpf)){
+         alert("Informe um cpf válido");
+         cadCpf.focus();
+         return false;
+      }
+      if(cadUsuario.value.length<3){
+         alert("Informe um nome de usuário");
+         cadUsuario.focus();
+         return false;
+      }
+      if(senha.value.length<6){
+          alert("Informe a senha");
+          senha.focus();    
+          return false;    
+      }
+      alert("Entrou");
+      frm2.submit();
+  }
+
+  function validarCPF(cpf) {	
+	cpf = cpf.replace(/[^\d]+/g,'');	
+	if(cpf == '') return false;	
+	// Elimina CPFs invalidos conhecidos	
+	if (cpf.length != 11 || 
+		cpf == "00000000000" || 
+		cpf == "11111111111" || 
+		cpf == "22222222222" || 
+		cpf == "33333333333" || 
+		cpf == "44444444444" || 
+		cpf == "55555555555" || 
+		cpf == "66666666666" || 
+		cpf == "77777777777" || 
+		cpf == "88888888888" || 
+		cpf == "99999999999")
+			return false;		
+	// Valida 1o digito	
+	add = 0;	
+	for (i=0; i < 9; i ++)		
+		add += parseInt(cpf.charAt(i)) * (10 - i);	
+		rev = 11 - (add % 11);	
+		if (rev == 10 || rev == 11)		
+			rev = 0;	
+		if (rev != parseInt(cpf.charAt(9)))		
+			return false;		
+	// Valida 2o digito	
+	add = 0;	
+	for (i = 0; i < 10; i ++)		
+		add += parseInt(cpf.charAt(i)) * (11 - i);	
+	rev = 11 - (add % 11);	
+	if (rev == 10 || rev == 11)	
+		rev = 0;	
+	if (rev != parseInt(cpf.charAt(10)))
+		return false;		
+	return true;   
+}
+</script>
