--- a/cadastro.html
+++ b/cadastro.html
@@ -43,7 +43,7 @@
           </div>
 
           <div class="flex justify-end mt-4">
-            <button type="submit" class="btn btn-primary bg-ms-blue" onclick="validar();">Cadastrar</button>
+            <button type="submit" class="btn btn-secondary bg-ms-pink" onclick="validar();">Cadastrar</button>
           </div>
           
         </form>
