--- a/cadastro.html
+++ b/cadastro.html
@@ -19,7 +19,7 @@
 
   <div class="p-4">
     <div class="md:max-w-[600px] md:mx-auto">
-      <h1 class="text-[24px]">Cadastro</h1>
+      <h1 class="text-[24px]">Cadastre-se:</h1>
       <form action="" id="frm2">
           <div class="mb-3 mt-3">
               <label for="nome" class="form-label font-bold">Nome:</label>
@@ -29,17 +29,13 @@
               <label for="email" class="form-label font-bold">E-mail:</label>
               <input type="text" class="form-control" id="cadEmail" placeholder="Digite seu e-mail" name="email">
             </div>
-            <div class="mb-3 mt-3">
-              <label for="cpf" class="form-label font-bold">CPF:</label>
-              <input type="text" class="form-control" id="cadCpf" placeholder="Digite seu CPF" name="cpf">
-          </div>
           <div class="mb-3 mt-3">
             <label for="user" class="form-label font-bold">Usuário:</label>
             <input type="text" class="form-control" id="cadUsuario" placeholder="Digite seu usuário" name="user">
           </div>
           <div class="mb-3">
             <label for="senha" class="form-label font-bold">Senha:</label>
-            <input type="password" class="form-control" id="CadSenha" placeholder="Digite sua senha" name="senha">
+            <input type="password" class="form-control" id="cadSenha" placeholder="Digite sua senha" name="senha">
           </div>
 
           <div class="flex justify-end mt-4">
@@ -69,59 +65,18 @@
          cadEmail.focus();
          return false;
       }
-      if(validarCPF(cadCpf)){
-         alert("Informe um cpf válido");
-         cadCpf.focus();
-         return false;
-      }
       if(cadUsuario.value.length<3){
          alert("Informe um nome de usuário");
          cadUsuario.focus();
          return false;
       }
-      if(senha.value.length<6){
-          alert("Informe a senha");
-          senha.focus();    
+      if(cadSenha.value.length<6){
+          alert("Informe uma senha com no mínimo 6 dígitos");
+          cadSenha.focus();    
           return false;    
       }
       alert("Entrou");
       frm2.submit();
   }
 
-  function validarCPF(cpf) {	
-	cpf = cpf.replace(/[^\d]+/g,'');	
-	if(cpf == '') return false;	
-	// Elimina CPFs invalidos conhecidos	
-	if (cpf.length != 11 || 
-		cpf == "00000000000" || 
-		cpf == "11111111111" || 
-		cpf == "22222222222" || 
-		cpf == "33333333333" || 
-		cpf == "44444444444" || 
-		cpf == "55555555555" || 
-		cpf == "66666666666" || 
-		cpf == "77777777777" || 
-		cpf == "88888888888" || 
-		cpf == "99999999999")
-			return false;		
-	// Valida 1o digito	
-	add = 0;	
-	for (i=0; i < 9; i ++)		
-		add += parseInt(cpf.charAt(i)) * (10 - i);	
-		rev = 11 - (add % 11);	
-		if (rev == 10 || rev == 11)		
-			rev = 0;	
-		if (rev != parseInt(cpf.charAt(9)))		
-			return false;		
-	// Valida 2o digito	
-	add = 0;	
-	for (i = 0; i < 10; i ++)		
-		add += parseInt(cpf.charAt(i)) * (11 - i);	
-	rev = 11 - (add % 11);	
-	if (rev == 10 || rev == 11)	
-		rev = 0;	
-	if (rev != parseInt(cpf.charAt(10)))
-		return false;		
-	return true;   
-}
 </script>
