--- a/detalhe.html
+++ b/detalhe.html
@@ -17,6 +17,9 @@
     <div w3-include-html="./partials/header.html"></div>
 
     <div class="p-4">
+        <div w3-include-html="menu.html" id="ms-mobile-menu" class="hidden md:block ms-mobile-menu fixed md:static top-[0] left-[0] w-9/12 md:mr-4  md:w-[316px] bg-white h-screen md:h-[450px] pt-[40px] md:pt-[20px] px-[20px] z-10 border-2">
+        </div>
+        
         <h1 class="text-[24px] text-ms-purple">Detalhes do produto</h1>
 
 
