--- a/cadastro.html
+++ b/cadastro.html
@@ -18,6 +18,9 @@
   <div w3-include-html="./partials/header.html"></div>
 
   <div class="p-4">
+    <div w3-include-html="menu.html" id="ms-mobile-menu" class="hidden md:block ms-mobile-menu fixed md:static top-[0] left-[0] w-9/12 md:mr-4  md:w-[316px] bg-white h-screen md:h-[450px] pt-[40px] md:pt-[20px] px-[20px] z-10 border-2">
+    </div>
+    
     <div class="md:max-w-[600px] md:mx-auto">
       <h1 class="text-[24px]">Cadastro</h1>
       <form action="" id="frm2">
