--- a/login.html
+++ b/login.html
@@ -17,8 +17,9 @@
     <div w3-include-html="./partials/header.html"></div>
 
     <div class="p-4">
-        <div w3-include-html="menu.html" id="ms-mobile-menu" class="hidden md:block ms-mobile-menu fixed md:static top-[0] left-[0] w-9/12 md:mr-4  md:w-[316px] bg-white h-screen md:h-[450px] pt-[40px] md:pt-[20px] px-[20px] z-10 border-2">
+        <div w3-include-html="menu.html" id="ms-mobile-menu" class="hidden ms-mobile-menu fixed md:static top-[0] left-[0] w-9/12 md:mr-4  md:w-[316px] bg-white h-screen md:h-[450px] pt-[40px] md:pt-[20px] px-[20px] z-10 border-2">
         </div>
+
         <div class="mb-3 mt-3">
             <label for="nome" class="form-label font-bold">Nome:</label>
             <input type="text" class="form-control" id="cadNome" placeholder="Digite seu nome completo" name="nome">
