--- a/forget.html
+++ b/forget.html
@@ -30,7 +30,7 @@
           </div>
 
           <div class="flex justify-end mt-4">
-            <button type="submit" class="btn btn-primary bg-ms-blue" onclick="validar();">Enviar link de recuperação</button>
+            <button type="submit" class="btn btn-secondary bg-ms-pink" onclick="validar();">Enviar link de recuperação</button>
           </div>
           
         </form>
