--- a/login.html
+++ b/login.html
@@ -57,7 +57,7 @@
            return false;     
         }
         if(senha.value.length<6){
-            alert("Informe a senha");
+            alert("Senha incorreta");
             senha.focus();    
             return false;
         }
